0030809: Data Exchange - fix misprint in RWMesh_CafReader::generateNames()